Bug 524752 - Partially-blocked annoying ad on cnn.com covers much of the page. r/sr=smorgan

--- a/camino/resources/application/ad_blocking.css
+++ b/camino/resources/application/ad_blocking.css
@@ -612,7 +612,8 @@ div[id^="right_ad_"],
 div[class$="WerberahmenOben"],
 div[class$="anzeige"],
 div[class~="sb_adsW"],
-div[class="sb_adsN"]
+div[class="sb_adsN"],
+div[id="PointrollOverlay"]
 
 { display: none !important }
 
